2009-05-06  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	Now, try to deal with preexisting fullscreen clients correctly,
	for real.

	* matchbox/core/mb-wm-client-base.c (mb_wm_client_base_realize):
	  Do create xwin_frame for fs clients but don't reparent them;
	  rather reparent them to the root window.  This way base_display_sync()
	  won't be confused by the lack of xwin_frame.
	* matchbox/core/mb-wm-client-base.h (MB_WM_DBG_SKIP_UNMAPS):
	  Macro for skip_unmaps debugging.
	* matchbox/core/mb-window-manager.c:
	  Use it.

2009-05-06  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	Release 0.2.37

2009-05-06  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	NB#114681 Application shortcuts in the home view are getting opened
		  when tapped here and there in camera application UI.

	* matchbox/core/mb-wm-client-base.c (mb_wm_client_base_realize):
	  Reverting madam's change not to freak out when we start handling
	  preexisting fullscreen clients.  Breaks initially fullscreen
	  clients when they wants to unmap--we get skip_unmaps wrong.

2009-05-05  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	Applied a patch from Laszlo for NB#113598:
	* matchbox/core/mb-wm-decor.c (mb_wm_decor_destroy): Remove
	ButtonRelease handler as well.
	(mb_wm_decor_button_destroy): Move code from
	mb_wm_decor_button_unrealize to here.

	Applied a fixed patch from Laszlo for NB#110527:
	* matchbox/core/mb-wm-client-window.c (mb_wm_client_window_init):
	Remove the XSelectInput call.
	* matchbox/core/mb-wm-client-base.c (mb_wm_client_base_realize): Call
	XSelectInput here and read the transiency property also.

	* matchbox/client-types/mb-wm-client-menu.c (mb_wm_client_menu_init):
	Add support for fixing NB#101437 -- some parts of the code need to be
	removed after the widget side uses the negative coordinates system for
	legacy application menus.

2009-05-04  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	Applied two patches from Laszlo Pere for NB#110527 and NB#106208.
